--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <section id="welcome" class="max-w-4xl mx-auto my-12 p-6 bg-white rounded-lg shadow-lg text-center relative overflow-hidden" data-aos="fade-in" style="height: auto; min-height: 600px;">
   <div class="relative z-10">
     <h2 class="text-3xl font-semibold mb-4">Welcome to My World!</h2>
-    <img src="profile.jpg" alt="My Photo" class="w-40 h-40 mx-auto rounded-full shadow-md border-4 border-white" />
+    <img src="mohitimg.jpeg" alt="My Photo" class="w-40 h-40 mx-auto rounded-full shadow-md border-4 border-white" />
     <h3 class="text-xl font-semibold mt-6 mb-2">Watch My Intro Video</h3>
     <video class="mx-auto rounded-lg shadow-lg" width="100%" controls autoplay loop muted>
       <source src="intro-video.mp4" type="video/mp4">
