--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shreyash Gharat | My Digital Identity</title>
+  <title>Mohit Chogale | My Digital Identity</title>
   <link rel="icon" href="favicon.ico" />
   
   <!-- Tailwind CSS CDN -->
@@ -69,11 +69,11 @@
 <!-- About Me -->
 <section id="about" class="max-w-4xl mx-auto my-12 p-6 bg-white rounded-lg shadow-md" data-aos="fade-up">
   <h2 class="text-2xl font-bold text-center mb-4">👤 About Me</h2>
-  <p><strong>Name:</strong> Shreyash Subhash Gharat</p>
-  <p><strong>Location:</strong> Saphale, Palghar, Mumbai, Maharashtra</p>
+  <p><strong>Name:</strong> Mohit Chogale</p>
+  <p><strong>Location:</strong> Malad, Borivali, Mumbai, Maharashtra</p>
   <p><strong>Education:</strong><br>
-    School - Sir JP International School, Palghar 401404<br>
-    College - Annasaheb Vartak College<br>
+    School - Bhavans, Andheri, Mumbai<br>
+    College - Bhavans College<br>
     Degree - B.Tech in Electronics & Computer Science (Aldel St. John College of Engineering & Management)
   </p>
   <p><strong>Languages:</strong> English (Advanced), Marathi (Medium), Hindi (Medium)</p>
@@ -177,14 +177,14 @@ fetch('personal.json')
   <!-- Contact Section -->
   <section id="contact" class="max-w-4xl mx-auto my-12 p-6 bg-white rounded-lg shadow-md" data-aos="fade-up">
     <h2 class="text-2xl font-bold text-center mb-4">Contact Me</h2>
-    <p>📞 <a href="tel:917773933725" class="text-blue-600 underline">+917773933725</a></p>
-    <p>💬 <a href="https://wa.me/917773933725" class="text-green-600 underline">Chat on WhatsApp</a></p>
-    <p>✉️ <a href="mailto:shreyashsubhash3921@gmail.com" class="text-red-600 underline">shreyashsubhash3921@gmail.com</a></p>
+    <p>📞 <a href="tel:919372816516" class="text-blue-600 underline">Mobile NO.</a></p>
+    <p>💬 <a href="https://wa.me/919372816516" class="text-green-600 underline">Chat on WhatsApp</a></p>
+    <p>✉️ <a href="mailto:mohitchogale21@gmail.com" class="text-red-600 underline">mohitchogale21@gmail.com</a></p>
     <p>📍 <iframe src="https://www.google.com/maps?q=Saphale,Maharashtra&output=embed" width="100%" height="200" style="border:0;" allowfullscreen=""></iframe></p>
-    <p class="mt-4">🌐 <a href="https://github.com/Shre3921" class="underline">GitHub</a> |
-       <a href="https://www.linkedin.com/in/shreyash-gharat-5a6a99226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="underline">LinkedIn</a> |
+    <p class="mt-4">🌐 <a href="https://github.com/SOLOPANEL" class="underline">GitHub</a> |
+       <a href="https://www.linkedin.com/in/mohit-chogale-2a6153281/" class="underline">LinkedIn</a> |
        <a href="https://www.instagram.com/shreyash_s_gharat?utm_source=qr&igsh=MTAwMm9tY3AzcXUzdA==" class="underline">Instagram</a></p>
-    <form action="https://formspree.io/f/xgvkqbdp" method="POST" class="mt-6 flex flex-col gap-4">
+    <form action="https://formspree.io/f/xkgrelop" method="POST" class="mt-6 flex flex-col gap-4">
       <input type="text" name="name" placeholder="Your Name" required class="border p-2 rounded-md" />
       <input type="email" name="_replyto" placeholder="Your Email" required class="border p-2 rounded-md" />
       <textarea name="message" placeholder="Your Message" required class="border p-2 rounded-md"></textarea>
@@ -193,7 +193,7 @@ fetch('personal.json')
   </section>
 
   <footer class="bg-blue-700 text-white text-center py-4 mt-12">
-    <p>© 2025 Shreyash Subhash Gharat </p>
+    <p>© 2025 Mohit Chogale </p>
   </footer>
 
   <!-- AOS JS -->
